--- a/picklunch/templates/manage_list.html
+++ b/picklunch/templates/manage_list.html
@@ -149,7 +149,7 @@ background-size: cover;
 
                                <div class="btn-r">
                                    <a href="/delete/{{i.name}}">삭제하기</a>
-                                   <a href="#{{i.name}}edit" class="btn-layerEdit">수정하기</a><!--버튼 중 수정하기 버튼을 누르면 음식점를 수정하는 팝업이 뜬다.-->
+                                   <a href="#{{i.name}}" class="btn-layerEdit">수정하기</a><!--버튼 중 수정하기 버튼을 누르면 음식점를 수정하는 팝업이 뜬다.-->
                                          <div id="{{i.name}}edit" class="pop-layer" >
                                         <div class="pop-container">
                                               <div class="pop-conts" >음식점 수정<br><br>
@@ -157,9 +157,9 @@ background-size: cover;
                                                  <form class="edit-popup" action="/edit/{{i.name}}" method="POST">
                                                      <input type="text" name="name" value="{{ i.name }}" style="margin-right: 30px; margin-top: 30px"><br>
                                                      <input type="text" name="number" value="{{ i.number }}" style="margin-right: 30px"><br>
-                                                     <input type="text" name="delivery" value="{{ i.delivery }}" style="margin-right:30px"><br>
                                                      <input type="text" name="address" value="{{ i.address }}" style="margin-right:30px"><br>
-                                                      <input type="text" name="category" value="{{ i.category }}" style="margin-right:30px"><br>
+                                                     <input type="text" name="category" value="{{ i.category }}" style="margin-right:30px"><br>
+                                                     <input type="text" name="delivery" value="{{ i.delivery }}" style="margin-right:30px"><br>
 
                                                      <div class="btn-r">
                                                      <input style="width:50px" type="submit" value="저장">
